2015-02-02  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Compose window may outlive main window

	* src/main-window.c (bw_send_msg_window_destroy_cb): check for
	NULL main-window.
	* src/sendmsg-window.c (balsa_sendmsg_destroy_handler): ditto.

2015-01-29  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Possible fix for RedHat bug #1050738 (Geoff Leach)

	* src/balsa-index.c (bndx_compose_foreach): check for NULL
	compose window.

2015-01-29  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Possible fix for RedHat bug #831889 (Geoff Leach)

	* src/sendmsg-window.c (collect_for_quote): check for NULL root.

2015-01-29  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Possible fix for RedHat bug #1097953 (Geoff Leach)

	* src/main-window.c (balsa_window_class_init), (balsa_window_new),
	(bw_close_mailbox_on_timer): use balsa_window_real_close_mbnode
	to close the mailbox instead of directly removing the notebook page.
	* src/message-window.c (destroy_message_window),
	(message_window_new): disconnect mailbox signals more carefully.

2015-01-28  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* balsa.appdata.xml: new appdata file

2015-01-28  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* src/balsa-icons.c (load_balsa_pixmap),
	(balsa_register_pixmaps): prune much pointless code.
	* src/sendmsg-window.c (subject_not_empty),
	(check_suggest_encryption): fix broken icons.
	* src/toolbar-factory.c (balsa_toolbar_new): ditto.

2015-01-28  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* src/ab-main.c (bab_cleanup), (set_address_book_menu_items),
	(get_main_menu), (bab_window_list_new), (bab_window_new),
	(ab_warning), (bab_set_intial_address_book), (main): streamline
	code.

2015-01-27  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Fix bug #741805 (Anders Jonsson)

	* help/C/balsa.sgml: fix spelling of "Portuguese".
	* src/sendmsg-window.c: ditto.

2015-01-27  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Deprecation cleanup

	* .gitignore: add "compile"