@@ -79,8 +79,6 @@ struct _BalsaMessage {
 
 	LibBalsaMessage *message;
 
-	gboolean close_with_msg;
-
         BalsaMessageFocusState focus_state;
 
         /* Find-in-message stuff */
@@ -112,8 +110,6 @@ struct _BalsaMessageClass {
 
 GType balsa_message_get_type(void);
 GtkWidget *balsa_message_new(void);
-void balsa_message_set_close(BalsaMessage * bmessage,
-			     gboolean close_with_msg);
 
 gboolean balsa_message_set(BalsaMessage * bmessage,
 			   LibBalsaMailbox * mailbox, guint msgno);
